--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light shadow-lg fixed-top" style="background-color: #f78442">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-lg fixed-top" style="background-color: #314E52">
       <div class="container">
         <a class="navbar-brand" href="#">Karya Pratala</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,9 +44,9 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/1630414341041.jpg" alt="Eka Ramadhan Ganteng" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Eka Ramadhan</h1>
-      <p class="lead">Geodetic Engineering</p>
+      <img src="img/bebek.jpeg" alt="Eka Ramadhan Ganteng" width="200" class="rounded-circle img-thumbnail" />
+      <h1 class="display-5 fw-bold">Karya Pratala</h1>
+      <p class="lead">Geodetic Engineering'20 Intrapreneurship</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#f3f4f5"
@@ -83,50 +83,88 @@
 <div class="container">
     <div class="row text-center mb-3">
         <div class="col">
-            <h2>My Projects</h2>
+            <h2>Our Projects</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias, eveniet!
+            </p>
         </div>
     </div>
-    <div class="row justify-content-evenly">
+    <div class="row text-start">
         <div class="col-md-4 mb-3">
-            <div class="card">
-                <img src="img/Projects/1.jpg" class="card-img-top" alt="Project1" />
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <div class="card border-0 shadow-lg w-100" style="width: 18rem;">
+            <img src="img/Projects/1.jpg" class="card-img-top" alt="Ganteng Banget">
+            <div class="card-body">
+              <h5 class="card-title fw-bold"><a href="blog-detail2.html">Kewirausahaan</a></h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
+              </p>
+            </div>
+            <div class="card-body main-blog-info">
+              <a href=""><img src="img/burung hantu.png" /></a>
+              <a href="" class="main-blog-author fw-bold">Kelompok 2</a><br />
+              <span>Feb 26, 2021</span>
+            </div>
+          </div>
+                </div>
+        <div class="col-md-4 mb-3">
+          <div class="card border-0 shadow-lg w-100" style="width: 18rem;">
+            <img src="img/Projects/1.jpg" class="card-img-top" alt="Ganteng Banget">
+            <div class="card-body">
+              <h5 class="card-title fw-bold"><a href="blog-detail4.html">Kewirausahaan</a></h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
+              </p>
+            </div>
+            <div class="card-body main-blog-info">
+              <a href=""><img src="img/koala.png" /></a>
+              <a href="" class="main-blog-author fw-bold">Kelompok 4</a><br />
+              <span>Feb 26, 2021</span>
+            </div>
+          </div>
+                </div>
+        <div class="col-md-4 mb-3">
+          <div class="card border-0 shadow-lg w-100" style="width: 18rem;">
+            <img src="img/Projects/1.jpg" class="card-img-top" alt="Ganteng Banget">
+            <div class="card-body">
+              <h5 class="card-title fw-bold"><a href="blog-detail6.html">Kewirausahaan</a></h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
+              </p>
+            </div>
+            <div class="card-body main-blog-info">
+              <a href=""><img src="img/panda.png" /></a>
+              <a href="" class="main-blog-author fw-bold">Kelompok 6</a><br />
+              <span>Feb 26, 2021</span>
+            </div>
+          </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                  <div class="card border-0 shadow-lg w-100" style="width: 18rem;">
+                    <img src="img/Projects/1.jpg" class="card-img-top" alt="Ganteng Banget">
+                    <div class="card-body">
+                      <h5 class="card-title fw-bold"><a href="blog-detail8.html">Kewirausahaan</a></h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
+                      </p>
+                    </div>
+                    <div class="card-body main-blog-info">
+                      <a href=""><img src="img/kucing.png" /></a>
+                      <a href="" class="main-blog-author fw-bold">Kelompok 8</a><br />
+                      <span>Feb 26, 2021</span>
+                    </div>
+                  </div>
+                        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card border-0 shadow-lg w-100" style="width: 18rem;">
+            <img src="img/Projects/1.jpg" class="card-img-top" alt="Ganteng Banget">
+            <div class="card-body">
+              <h5 class="card-title fw-bold"><a href="blog-detail10.html">Kewirausahaan</a></h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
+              </p>
+            </div>
+            <div class="card-body main-blog-info">
+              <a href=""><img src="img/singa.png" /></a>
+              <a href="" class="main-blog-author fw-bold">Kelompok 10</a><br />
+              <span>Feb 26, 2021</span>
+            </div>
+          </div>
                 </div>
               </div> 
-        </div>
-        <div class="col-md-4 mb-3">
-            <div class="card">
-                <img src="img/Projects/2.jpg" class="card-img-top" alt="Project1" />
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div> 
-        </div>
-        <div class="col-md-4 mb-3">
-            <div class="card">
-                <img src="img/Projects/4.jpg" class="card-img-top" alt="Project1" />
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div> 
-        </div>
-        <div class="col-md-4 mb-3">
-            <div class="card">
-                <img src="img/Projects/5.jpg" class="card-img-top" alt="Project1" />
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div> 
-        </div>
-        <div class="col-md-4 mb-3">
-            <div class="card">
-                <img src="img/Projects/3.jpg" class="card-img-top" alt="Project1" />
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div> 
-        </div>
     </div>
 
     </div>
@@ -139,7 +177,7 @@
     <section id="contact">
         <div class="row text-center">
             <div class="col">
-                <h2>Contact Me</h2>
+                <h2>Contact Us</h2>
             </div>
         </div>
         <div class="row justify-content-center mb-3">
@@ -167,8 +205,8 @@
     <!-- Akhir Contact -->
 
     <!-- Footer -->
-    <footer style="background-color: #f78442;" class="text-white fw-bold text-center pb-5">
-        <p>Created by <i class="bi bi-heart-fill text-danger"></i> Geodetic Engginering 2020</p>
+    <footer style="background-color: #314E52;" class="text-white fw-bold text-center pb-5">
+        <p>Created by <i class="bi bi-heart-fill text-danger"></i> Geodetic Engineering 2020</p>
     </footer>
     <!-- Akhir Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
